2007-08-26    <tino@firebird.03.softkill.net>

	* alarm.h (tino_alarm): added, wrapper to alarm()

2007-08-25    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_select_timeoutEn): routine prototype changed
	(alarm_fn now implicite and changed to a timeout_fn with a user
	pointer).  Routine now returns 0 only if there was a timeout (and
	no timeout_fn set) or there is no work to do (no timeout and no
	socket to select).  The changed timeout_fn is called with first
	parameter non-NULL to alter the timeout structure (which is a
	pointer there) and NULL if there was a timeout (the timeout
	structure value is undefined according to POSIX, so to pass it
	makes no sense anyway).
	(tino_sock_select_loop1A, tino_sock_select_loop2A) 
	(tino_sock_select_loop3A): added for convenience
	(tino_sock_select_loopA): prototype changed for convenience

2007-08-24    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_select_loop): comment improved

2007-08-19    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_reset_off): added

	* sockbuf.h (tino_sockbuf_process): ACCEPT works now

	* buf.h (tino_buf_write_away): bug removed, routine works now

2007-08-17    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_udp): better error handling

	* sockbuf.h (tino_sockbuf_process): accept function now gives the
	accepted socket (fileno) as second parameter.

	* sock_tool.h (tino_gethostname): added

	* str.h (tino_str_ltrim_const, tino_str_ltrim, tino_str_rtrim):
	added
	(tino_str_trim): renamed from tino_trim
	(tino_str_slice): added
	(tino_str_issep_const, tino_str_issep): added

2007-08-15    <tino@firebird.03.softkill.net>

	* file.h (tino_file_lstat_diff): 000 replaced by TINO_XXX

	* filetool.h (tino_file_gets): added

	* file.h (tino_file_fread, tino_file_fwrite, tino_file_fread)
	(tino_file_fgets, tino_file_ferror, tino_file_feof): added

	* md5.h (tino_md5_hex): reversed args
	(tino_md5_ctx, ...) made all lowercase.  Define