@@ -1,3 +1,8 @@
+2007-09-17    <tino@firebird.03.softkill.net>
+
+	* getopt.h: TINO_GETOPT_STRINGOPTS usage comment improved (As
+	I could not understand it myself before *eg*).
+
 2007-08-26    <tino@firebird.03.softkill.net>
 
 	* alarm.h (tino_alarm): added, wrapper to alarm()
